--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "@types/googlemaps": "^3.30.16",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
+    "jquery": "^3.3.1",
     "rxjs": "~6.2.0",
+    "select2": "^4.0.6-rc.1",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
