--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,10 @@
                             "node_modules/bootstrap/dist/css/bootstrap.css",
                             "src/app/styles/styles.scss"
                         ],
-                        "scripts": []
+                        "scripts": [
+                            "node_modules/jquery/dist/jquery.js",
+                            "node_modules/select2/dist/js/select2.full.js"
+                        ],
                     },
                     "configurations": {
                         "production": {
