--- a/package.json
+++ b/package.json
@@ -20,11 +20,14 @@
     "@angular/platform-browser": "^6.1.0",
     "@angular/platform-browser-dynamic": "^6.1.0",
     "@angular/router": "^6.1.0",
+    "@ng-bootstrap/ng-bootstrap": "^4.0.1",
     "@ngui/map": "^0.30.3",
     "@types/googlemaps": "^3.30.16",
     "bootstrap": "^4.1.3",
     "core-js": "^2.5.4",
     "jquery": "^3.3.1",
+    "ng2-select2": "^1.0.0-beta.16",
+    "ngx-virtual-scroller": "^1.0.16",
     "rxjs": "~6.2.0",
     "select2": "^4.0.6-rc.1",
     "zone.js": "~0.8.26"
